--- a/PlayTTD-Web/views/layouts/empty.tt
+++ b/PlayTTD-Web/views/layouts/empty.tt
@@ -22,6 +22,12 @@
       })();
     </script>
 
+    <script type="text/javascript">
+      var Engine = {
+        'player-name': '<% vars.player.name %>',
+        'player-uuid': '<% vars.player.uuid %>'  
+      };
+    </script>
     <script type='text/javascript' src='<% request.uri_base %>/javascripts/cookie.js'></script>
   </head>
   <body>
