--- a/PlayTTD-Web/views/index.tt
+++ b/PlayTTD-Web/views/index.tt
@@ -8,11 +8,11 @@
 </p>
 
 <p>
-  <strong>Multiplayer</strong> mode is highly experimental, server can take up to 255 players in 15 companies. You should be invaited to play for now.
+  <strong>Multiplayer</strong> mode is highly experimental, server can take up to 255 players in 15 companies. You should be invited to play for now.
 </p>
 
 <p>
-  Play <a href="/play/">single-player</a> | <a href="#">multiplayer</a>
+  Play <a href="/play/">single-player</a> | <a href="/multiplayer/">multiplayer</a>
 </p>
 
 <h3>Game music</h3>
