Change rules for multiplayer

--- a/PlayTTD-Web/views/multiplayer-forbidden.tt
+++ b/PlayTTD-Web/views/multiplayer-forbidden.tt
@@ -1,5 +1,5 @@
 <p>
-  Multiplayer mode is in testing now. You should send invite request to caiiiycuk@gmail.com if you intresting to help with testing multiplayer. 
+  You should <noindex><a href="/customize/">activate</a></noindex> you account or <noindex><a href="/login/">login</a></noindex> to play in multiplayer game.
 </p>
 
 Play <a href="/play/">single-player</a>
