--- a/PlayTTD-Web/views/index.tt
+++ b/PlayTTD-Web/views/index.tt
@@ -8,7 +8,7 @@
 </p>
 
 <p>
-  <strong>Multiplayer</strong> mode is highly experimental, server can take up to 255 players in 15 companies. You should be invited to play for now.
+  <strong>Multiplayer</strong> mode is highly experimental, server can take up to 255 players in 15 companies.
 </p>
 
 <p>
