Move saves to play-portal

--- a/PlayTTD-Web/public/stylesheets/styles.css
+++ b/PlayTTD-Web/public/stylesheets/styles.css
@@ -556,7 +556,9 @@ a small {
 }
 
 ul {
-  list-style-image: url("../images/bullet.png");
+  /*list-style-image: url("../images/bullet.png");*/
+  list-style-image: none;
+  list-style-type: none;
 }
 
 strong {
