--- a/PlayTTD-Web/views/layouts/empty.tt
+++ b/PlayTTD-Web/views/layouts/empty.tt
@@ -7,7 +7,7 @@
     <% vars.commons.css %>
     <% vars.commons.script(arguments) %>
 
-    <link rel="stylesheet" href="<% request.uri_base %>/stylesheets/empty.css" />
+    <link rel="stylesheet" href="<% request.uri_base %>/stylesheets/empty.css?v=1.0" />
     <script type='text/javascript'>
       var UUID = Engine['player-uuid'];
     </script>
