--- a/PlayTTD-Web/views/play.tt
+++ b/PlayTTD-Web/views/play.tt
@@ -58,11 +58,11 @@
       Module['kNb'] = Module.setStatus;
     </script>
 
-<script type='text/javascript' src='<% request.uri_base %>/javascripts/common.js'></script>
+<script type='text/javascript' src='<% request.uri_base %>/javascripts/common.js?v=1.2.3.p5'></script>
 
-<script type='text/javascript' src='<% request.uri_base %>/javascripts/game.js'></script>
+<script type='text/javascript' src='<% request.uri_base %>/javascripts/game.js?v=1.2.3.p5'></script>
 
-<script type='text/javascript' src='<% request.uri_base %>/openttd.js'></script>
+<script type='text/javascript' src='<% request.uri_base %>/openttd.js?v=1.2.3.p5'></script>
 
 <script type="text/javascript">
     document.addEventListener("DOMContentLoaded", function(){
