Optimize for search

--- a/PlayTTD-Web/views/index.tt
+++ b/PlayTTD-Web/views/index.tt
@@ -20,7 +20,7 @@
 </div>
 
 <h3>Game music</h3>
-<p>You can listen  music from game on <noindex><a href="/jukebox/">jukebox</a></noindex> page.</p>
+<p>You can listen  music from game on <a href="/jukebox/">jukebox</a> page.</p>
 
 <h3>Performance</h3>
 
