--- a/PlayTTD-Web/views/layouts/empty.tt
+++ b/PlayTTD-Web/views/layouts/empty.tt
@@ -2,8 +2,8 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html lang="en-us" xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <% vars.commons.title %>
-    <% vars.commons.meta %>
+    <% vars.commons.title(pageTitle) %>
+    <% vars.commons.meta(pageMeta) %>
     <% vars.commons.css %>
     <% vars.commons.script(arguments) %>
 
