--- a/PlayTTD-Web/views/layouts/empty.tt
+++ b/PlayTTD-Web/views/layouts/empty.tt
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html lang="en-us" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="<% vars.locale %>" xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <% vars.commons.title(pageTitle) %>
-    <% vars.commons.meta(pageMeta) %>
+    <% vars.commons.title %>
+    <% vars.commons.meta %>
     <% vars.commons.css %>
     <% vars.commons.script(arguments) %>
 
